# Rusty-Coin

./: .gitignore  BUILD_INSTRUCTIONS.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.patch  LICENSE  README.md  agents.md  base64ct_dependency.txt  cargo_metadata.json  cargo_why_build_depends_base64ct.txt  demo_system.py  rcbp.txt  rctb.txt  test_auth_integration.rs  test_governance.sh  test_masternode.sh  test_mining.sh  test_network.sh  test_pos.sh
docs/: API_REFERENCE.md  DEVELOPER_GUIDE.md  DKG_INTEGRATION_SUMMARY.md  PERFORMANCE.md  protocol_specifications.md  rpc_api.md  sidechain_README.md
rusty-coin-core/: Cargo.toml
rusty-coin-core/benches/: oxide_hash.rs
rusty-coin-core/src/: error.rs  lib.rs
rusty-coin-core/src/consensus/: mod.rs  pos.rs
rusty-coin-core/src/crypto/: mod.rs  oxide_hash.rs
rusty-coin-core/src/types/: mod.rs
rusty-coin-core/tests/: consensus_test.rs  consensus_tests.rs  pos_tests.rs
rusty-coin-node/: Cargo.toml  build.rs
rusty-coin-node/examples/: client.rs
rusty-coin-node/proto/: rustcoin.proto
rusty-coin-node/src/: main.rs  network.rs  storage.rs
rusty-coin-node/src/proto/: blockchain.proto
rusty-consensus/: Cargo.toml
rusty-consensus/src/: adaptive_block_size.rs  error.rs  lib.rs  pos.rs  pos.rs.bak  pos_integration_test.rs  pos_selection.rs  pos_slashing.rs  pos_slashing_tests.rs  pow.rs  pow_difficulty_tests.rs  state.rs  utxo_set.rs  validation.rs  validation_simple.rs
rusty-core/: Cargo.toml  cargo_check_output.txt
rusty-core-types/: Cargo.toml
rusty-core/benches/: block_validation.rs  hash_operations.rs  my_benchmark.rs  script_execution.rs  transaction_validation.rs
rusty-core/fuzz/: README.md
rusty-core/fuzz/fuzz_targets/: fuzz_block_parsing.rs  fuzz_consensus_validation.rs  fuzz_cross_chain_tx.rs  fuzz_ferrisscript.rs  fuzz_fraud_proofs.rs  fuzz_governance_proposals.rs  fuzz_merkle_proofs.rs  fuzz_sidechain_validation.rs  fuzz_transaction_parsing.rs
rusty-core/src/: audit_log.rs  constants.rs  governance.rs  lib.rs  light_client.rs  light_client_backup.rs  light_client_fixed.rs  mempool.rs  protocol_constants.rs  sidechain.rs  transaction_builder.rs  validation.rs
rusty-core/src/consensus/: blockchain.rs  error.rs  governance_state.rs  mod.rs  pos.rs  pow.rs  state.rs  threshold_signatures.rs  utxo_set.rs
rusty-core/src/network/: mod.rs  sync.rs  sync_manager.rs
rusty-core/src/script/: mod.rs  opcode.rs  script_engine.rs
rusty-core/src/script/script_engine/: standard_scripts.rs
rusty-core/src/sidechain/: cross_chain_communication.rs  cross_chain_processor.rs  federation_integrator.rs  federation_manager.rs  fraud_proofs.rs  integration_tests.rs  inter_sidechain_transfer.rs  mainchain_validator.rs  mod.rs  proof_validation.rs  sidechain_consensus.rs  tests.rs  two_way_peg.rs  types.rs
rusty-core/src/sidechain/fraud_proofs/: tests.rs
rusty-core/src/sidechain/two_way_peg/: tests.rs
rusty-core/src/state/: fast_sync.rs  merkle_patricia_trie.rs  mod.rs  proof_manager.rs  snapshot_manager.rs  state_manager.rs
rusty-core/src/types/: mod.rs
rusty-core/tests/: blockchain_validation_test.rs  consensus_proptest.rs  consensus_tests.rs  consensus_validation_tests.rs  critical_features_integration_tests.rs  ferrisscript_opcode_tests.rs  ferrisscript_tests.rs  governance_param_change_test.rs  governance_tests.rs  integration_tests.rs  network_simulation_tests.rs  proptest_test.rs  spec_tests.rs  sync_performance_tests.rs
rusty-core/tests/network_simulation/: high_volume.rs  latency.rs  malicious_peers.rs  mod.rs  network_partition.rs
rusty-crypto/: Cargo.toml
rusty-crypto/src/: dkg.rs  dkg_manager.rs  hash.rs  keypair.rs  lib.rs  post_quantum.rs  signature.rs
rusty-governance/: Cargo.toml  test_integration.rs
rusty-governance/src/: governance_coordinator.rs  lib.rs  parameter_manager.rs  proposal_activation.rs  proposal_validation.rs  stake_burning.rs  vote_validation.rs  vote_validation_tests.rs  voting_coordinator.rs
rusty-jsonrpc/: Cargo.toml
rusty-jsonrpc/src/: auth.rs  error.rs  lib.rs  main.rs  rate_limiter.rs  rpc.rs  server.rs  websocket.rs
rusty-masternode/: Cargo.toml
rusty-masternode/src/: dkg_manager.rs  ferrous_shield.rs  lib.rs  mn_list.rs  mn_list_propagation.rs  network_coordinator.rs  oxidesend.rs  pose.rs  pose_coordinator.rs  quorum_formation.rs  slashing.rs  types.rs
rusty-network/: Cargo.toml
rusty-network/src/: error.rs
rusty-network/src/network/: mod.rs
rusty-network/src/peer/: mod.rs
rusty-network/src/protocol/: message.rs  mod.rs
rusty-node/: Cargo.toml  README.md  node_run_output.txt
rusty-node/src/: main.rs  sync_integration.rs
rusty-node/tests/: integration_tests.rs
rusty-p2p/: Cargo.toml  README.md
rusty-p2p/examples/: p2p_node.rs
rusty-p2p/src/: behaviour.rs  lib.rs  main.rs  metrics.rs  network.rs  network.rs.backup  network_fixed.rs  p2p_network.rs  peer_manager.rs  peer_selection.rs  types.rs
rusty-p2p/src/protocols/: block_sync.rs  mod.rs  peer_discovery.rs  proof_sync.rs  tx_prop.rs
rusty-rpc/: Cargo.toml
rusty-rpc/examples/: api_key_demo.rs
rusty-rpc/src/: auth.rs  error.rs  lib.rs  middleware.rs  rpc.rs  server.rs
rusty-shared-types/: Cargo.toml
rusty-shared-types/src/: dkg.rs  dkg_messages.rs  governance.rs  lib.rs  masternode.rs  p2p.rs  proof.rs  script_engine.rs
rusty-shared-types/src/script/: opcode.rs
rusty-shared-types/tests/: compliance_tests.rs  merkle_tests.rs  serialization_tests.rs  serialization_tests_new.rs
rusty-types/: Cargo.toml
rusty-wallet/: Cargo.toml
rusty-wallet/src/: keys.rs  lib.rs  rpc_integration.rs  storage.rs  tx_builder.rs
scripts/: build_regtest_minimal.sh  deploy_testnet.sh  fix_bincode_compatibility.sh  fix_eq_trait_issues.sh  fix_test_errors.sh  generate_tls_cert.sh  monitor_testnet.sh  quick_spec_check.sh  run_all_tests_and_validation.sh  setup_regtest_network.sh  start_regtest_network.sh  test_governance_enhanced.sh  test_masternode_enhanced.sh  test_pos_enhanced.sh  validate_compliance.py  verify_specs.py
tests/: cross_chain_processing_tests.rs  jsonrpc_api_tests.rs  (+5 more)
(+43 files in other folders)
