[workspace]
resolver = "2"
members = [
    "rusty-consensus",
    "rusty-core",
    "rusty-core-types",
    "rusty-crypto",
    "rusty-governance",
    "rusty-jsonrpc",
    "rusty-masternode",
    "rusty-network",
    "rusty-node",
    "rusty-p2p",
    "rusty-rpc",
    "rusty-shared-types",
    "rusty-types",
    "rusty-wallet",
]

# Workspace-level dependency management to ensure compatibility with Rust 1.75.0
[workspace.dependencies]
# Core dependencies with compatible versions
serde = { version = "1.0.130", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
hex = { version = "0.4", features = ["serde"] }
log = "0.4"

# Crypto dependencies - pinned to compatible versions
blake3 = { version = "1.3.3", default-features = false }
sha2 = { version = "0.10", features = ["std"] }
ed25519-dalek = { version = "1.0", features = ["rand_core"] }
ed25519 = "1.5"
rand_core = { version = "0.6.4", features = ["std"] }
rand = "0.7"  # Pin to version compatible with ed25519_dalek

# BLS and threshold signature dependencies - use newer versions that work with Rust 1.87
threshold_crypto = "0.4.0"
bls12_381 = "0.8.0"          # Use newer version that doesn't have yanked dependencies
group = "0.13.0"             # Use newer version that doesn't have yanked dependencies

# Network dependencies
tokio = { version = "1.0", features = ["full"] }
# libp2p with minimal required features
libp2p = { version = "0.54.1", default-features = false, features = [
    "tcp",
    "dns",
    "yamux",
    "noise",
    "kad",
    "mdns",
    "identify",
    "ping",
    "gossipsub",
    "request-response"
]}
futures = { version = "0.3", features = ["thread-pool"] }

# Database and storage
rocksdb = { version = "0.21", default-features = false, features = ["lz4"] }
memmap2 = "0.5.10"

# Other utilities
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"

# Pin problematic dependencies to compatible versions
backtrace = "0.3.69"  # Pin to version compatible with Rust 1.75
base64ct = "1.7.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.fuzz]
inherits = "release"
debug = 1
overflow-checks = false
