[package]
name = "rusty-coin-core"
version = "0.1.0"
edition = "2021"
description = "Core data structures and cryptography for Rusty Coin"
license = "MIT OR Apache-2.0"
authors = ["Rusty Coin Developers"]
repository = "https://github.com/rusty-coin/rusty-coin"

[features]
default = ["std"]
std = [
    "serde/std",
    "rand_core/std",
    "ed25519-dalek/std",
    "rand_chacha/std",
    "anyhow/std",
    "log/std",
    "hex/std",
    "blake3/std",
    "sha2/std",
    "ring/std",
    "bincode/std",
]
alloc = []

[dependencies]
# Cryptography
blake3 = "1.5"
sha2 = "0.10"
rand = "0.8"
ring = "0.17"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["std"] } # For OsRng
rand_chacha = "0.3" # For deterministic pseudo-random number generation

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0.0-rc.3", features = ["derive", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"

# Async runtime
tokio = { version = "1.0", features = ["full"], optional = true }

[dev-dependencies]
hex = "0.4"
quickcheck = { version = "1.0", features = ["use_logging"] }
proptest = { version = "1.0", default-features = false, features = ["std"] }
