[package]
name = "rusty-coin-node"
version = "0.1.0"
edition = "2021"
description = "Rusty Coin full node implementation"
license = "MIT OR Apache-2.0"
authors = ["Rusty Coin Developers"]
repository = "https://github.com/rusty-coin/rusty-coin"

[dependencies]
# Local crates
rusty-coin-core = { path = "../rusty-coin-core" }

# CLI
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
indicatif = "0.17"

# Networking
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.4"
tonic = "0.8"
prost = "0.11"
prost-types = "0.11"
prost-derive = "0.11"

# Storage
# Temporarily using sled instead of rocksdb due to build issues
sled = "0.34.7"
bincode = "2.0.0-rc.3"

# Logging
env_logger = "0.10"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
serde_json = "1.0"

# P2P Networking
libp2p = { version = "0.55.0", features = ["full"] }
libp2p-swarm-derive = "0.35.0"
libp2p-mplex = "0.43"
libp2p-yamux = "0.47"
libp2p-noise = "0.46"
libp2p-ping = "0.46"
libp2p-tcp = "0.43"
libp2p-request-response = "0.28"
libp2p-kad = "0.47"
futures = "0.3"

rand = "0.8"
tokio-util = { version = "0.7", features = ["codec"] }
async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1"

[build-dependencies]
tonic-build = "0.8"
prost-build = "0.11"
