[package]
name = "rusty-consensus"
version = "0.1.0"
edition = "2021"
description = "Consensus algorithms for Rusty Coin blockchain"
repository = "https://github.com/rusty-coin/rusty-coin"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "cryptocurrency", "consensus"]
categories = ["cryptography", "cryptocurrency", "blockchain"]

[dependencies]
blake3 = { workspace = true, default-features = false }
rand = { workspace = true, features = ["std"] }
rand_chacha = "0.3"
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true, optional = true }
tracing = { version = "0.1.37", optional = true }
hex = { workspace = true }
bincode = { workspace = true }
primitive-types = { version = "0.12.1", features = ["serde"] }
ed25519-dalek = { workspace = true, features = ["serde", "rand_core", "std"] }
signature = { version = "2.2.0", features = ["std"] }
rusty-types = { path = "../rusty-types" }
rusty-crypto = { path = "../rusty-crypto" }
rusty-shared-types = { path = "../rusty-shared-types" }
zerocopy = { version = "0.8.26", features = ["derive"] }

[dependencies.rocksdb]
workspace = true
optional = true

[features]
default = ["rocksdb", "log", "tracing"]
rocksdb = ["dep:rocksdb"]
log = ["dep:log"]
tracing = ["dep:tracing"]

[build-dependencies]
prost-build = { version = "0.12.0", optional = true }

[dev-dependencies]
proptest = "1.4.0"
hex-literal = "0.4"
