[package]
name = "rusty-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true, features = ["serde"] }
rand_core = { workspace = true, features = ["std"] }
serde = { workspace = true }
tempfile = "3.10.1"
hex = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
rocksdb = { workspace = true, optional = true }
rand = { workspace = true }
rayon = "1.5.1"
primitive-types = "0.12.1"
parity-scale-codec = { version = "3.6.4", features = ["derive"] }
scale-info = { version = "2.5.0", features = ["derive"] }
rusty-crypto = { path = "../rusty-crypto" }
ripemd = "0.1.0"
bytes = "1.6.0"
rusty-shared-types = { path = "../rusty-shared-types" }
rusty-types = { path = "../rusty-types" }
rand_chacha = "0.3.1"
zerocopy = "0.7.0"
serde_bytes = { workspace = true }
rusty-consensus = { path = "../rusty-consensus" }
tracing = { workspace = true }
tracing-attributes = { version = "0.1", optional = true }
tracing-subscriber = "0.3"
tokio = { workspace = true }
async-trait = "0.1"
async-std = "1.12.0"
# Use specific libp2p version with required features
libp2p = { version = "0.53.0", default-features = false, features = [
    "tcp",
    "dns",
    "yamux",
    "noise",
    "kad",
    "mdns",
    "identify",
    "ping",
    "macros",
    "serde"
]}
sha1 = "0.10.1"
sha2 = { workspace = true }
threshold_crypto = { workspace = true }
arbitrary = { version = "1.3", features = ["derive"] }

[features]
default = ["tracing"]
rocksdb = ["dep:rocksdb"]
tracing = ["dep:tracing-attributes"]

# Fuzzing dependencies
[dependencies.libfuzzer-sys]
version = "0.4"

[dev-dependencies]
proptest = "1.0"
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

# Fuzz testing targets
[[bin]]
name = "fuzz_block_parsing"
path = "fuzz/fuzz_targets/fuzz_block_parsing.rs"

[[bin]]
name = "fuzz_transaction_parsing"
path = "fuzz/fuzz_targets/fuzz_transaction_parsing.rs"

[[bin]]
name = "fuzz_sidechain_validation"
path = "fuzz/fuzz_targets/fuzz_sidechain_validation.rs"

[[bin]]
name = "fuzz_governance_proposals"
path = "fuzz/fuzz_targets/fuzz_governance_proposals.rs"

[[bin]]
name = "fuzz_cross_chain_tx"
path = "fuzz/fuzz_targets/fuzz_cross_chain_tx.rs"

[[bin]]
name = "fuzz_fraud_proofs"
path = "fuzz/fuzz_targets/fuzz_fraud_proofs.rs"

[[bin]]
name = "fuzz_merkle_proofs"
path = "fuzz/fuzz_targets/fuzz_merkle_proofs.rs"

[[bin]]
name = "fuzz_consensus_validation"
path = "fuzz/fuzz_targets/fuzz_consensus_validation.rs"

[package.metadata.cargo-fuzz]
targets = [
    "fuzz_block_parsing",
    "fuzz_transaction_parsing",
    "fuzz_sidechain_validation",
    "fuzz_governance_proposals",
    "fuzz_cross_chain_tx",
    "fuzz_fraud_proofs",
    "fuzz_merkle_proofs",
    "fuzz_consensus_validation"
]
