[package]
name = "rusty-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
ed25519 = { workspace = true }
rand_core = { workspace = true }
rand = { workspace = true }
rusty-shared-types = { path = "../rusty-shared-types" }

# BLS and threshold signature dependencies
threshold_crypto = { workspace = true }
bls12_381 = { workspace = true }
group = { workspace = true }

memmap2 = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
hex-literal = "0.4.0"
