[package]
name = "rusty-governance"
version = "0.1.0"
edition = "2021"
authors = ["Rusty Coin Core Team"]
description = "Governance system for Rusty Coin including proposal management and stake burning"

[dependencies]
rusty-shared-types = { path = "../rusty-shared-types" }
rusty-core = { path = "../rusty-core" }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
blake3 = "1.5"
hex = "0.4"
bincode = "1.3"
ed25519-dalek = "2.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.10"
