[package]
name = "rusty-jsonrpc"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusty-core = { path = "../rusty-core" }
rusty-masternode = { path = "../rusty-masternode" }
# rusty-p2p = { path = "../rusty-p2p" }  # Temporarily disabled
log = "0.4"
env_logger = "0.9"
tokio = { version = "1", features = ["full"] }