[package]
name = "rusty-jsonrpc"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-core-client = "18.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
thiserror = "1.0"
rusty-core = { path = "../rusty-core" }
rusty-masternode = { path = "../rusty-masternode" }
rusty-shared-types = { path = "../rusty-shared-types" }
rusty-wallet = { path = "../rusty-wallet" }
rusty-p2p = { path = "../rusty-p2p" }
log = "0.4"
env_logger = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
blake3.workspace = true
