[package]
name = "rusty-masternode"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { workspace = true }
rusty-types = { path = "../rusty-types"}
rusty-core = { path = "../rusty-core" }
rusty-shared-types = { path = "../rusty-shared-types" }
rusty-crypto = { path = "../rusty-crypto" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
blake3 = "1"
thiserror = "1.0.50"
rand = "0.8.5"
log = "0.4.17"
threshold_crypto = "0.4"
hex = "0.4"
rand_chacha = "0.3"
async-std = { version = "1.12", features = ["attributes"] }
rusty-p2p = { path = "../rusty-p2p" }
rusty-consensus = { path = "../rusty-consensus" }
