[package]
name = "rusty-node"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
rocksdb = { workspace = true }
rusty-core = { path = "../rusty-core" }
rusty-jsonrpc = { path = "../rusty-jsonrpc" }
rusty-p2p = { path = "../rusty-p2p" }
rusty-types = { path = "../rusty-types" }
serde = { workspace = true }
tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
confy = "0.6.0"
axum = "0.7"
futures = { workspace = true }
tracing-appender = "0.2"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json = { workspace = true }