[package]
name = "rusty-p2p"
version = "0.1.0"
authors = ["Rusty-Coin Team"]
edition = "2021"
description = "P2P networking layer for Rusty-Coin cryptocurrency"
repository = "https://github.com/rusty-coin/rusty-coin"
license = "MIT"

[features]
default = ["full"]
full = [
    "libp2p/full",


]

[dependencies]
# Core dependencies
async-trait = "0.1.79"
async-std = { version = "1.12", features = ["attributes", "std"] }
blake3 = "1.5.0"
bytes = { version = "1.5.0", features = ["serde"] }
futures = { version = "0.3.30", features = ["thread-pool", "async-await"] }
hex = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
libp2p = { version = "0.54.1", default-features = false, features = [

    "dns",
    "yamux",
    "noise",
    "kad",
    "mdns",
    "identify",
    "ping",
    "macros",
    "serde",

    "request-response",
    "gossipsub"
]}
libp2p-core = { version = "0.43.0", default-features = false }

libp2p-swarm = { version = "0.42.0", default-features = false }
libp2p-request-response = { version = "0.28.0", default-features = false }
libp2p-gossipsub = { version = "0.44.0", default-features = false, features = ["serde"] }
libp2p-identify = { version = "0.45.0", default-features = false }
libp2p-ping = { version = "0.42.0", default-features = false }
libp2p-kad = { version = "0.46.0", default-features = false }

log = { version = "0.4.20", features = ["std", "serde"] }
lru = { version = "0.12.0", features = ["hashbrown"] }
rand = { version = "0.8.5", features = ["std", "std_rng"] }
rand_chacha = "0.3.1"
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde_json = { version = "1.0.108", features = ["std"] }
thiserror = "1.0.56"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "time", "sync", "net", "io-util"] }
tracing = { version = "0.1.40", features = ["std"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }

# Project dependencies
rusty-shared-types = { path = "../rusty-shared-types" }
rusty-core = { path = "../rusty-core" }


[dev-dependencies]
rand = "0.8"

libp2p-swarm = { version = "0.43.1", default-features = false}
libp2p-request-response = { version = "0.28.0", default-features = false }
libp2p-gossipsub = { version = "0.48.0", default-features = false, features = ["serde"] }
libp2p-identify = { version = "0.43.0", default-features = false }
libp2p-ping = { version = "0.43.0", default-features = false }
libp2p-kad = { version = "0.46.0", default-features = false }
log = { version = "0.4.20", features = ["std", "serde"] }
lru = { version = "0.12.0", features = ["hashbrown"] }
rand_chacha = "0.3.1"
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde_json = { version = "1.0.108", features = ["std"] }
thiserror = "1.0.56"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "time", "sync", "net", "io-util"] }
tracing = { version = "0.1.40", features = ["std"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
rusty-shared-types = { path = "../rusty-shared-types" }
rusty-core = { path = "../rusty-core" }

[profile.fuzz]
inherits = "release"
debug = 1
overflow-checks = false
