[package]
name = "rusty-p2p"
version = "0.1.0"
authors = ["Rusty-Coin Team"]
edition = "2021"
description = "P2P networking layer for Rusty-Coin cryptocurrency"
repository = "https://github.com/rusty-coin/rusty-coin"
license = "MIT"

[features]
default = []
full = []

[dependencies]
# Core dependencies
async-trait = "0.1.79"
async-std = { version = "1.12", features = ["attributes", "std"] }
bincode = "1.3.3"
blake3 = "1.5.0"
bytes = { version = "1.5.0", features = ["serde"] }
env_logger = "0.10.0"
futures = { version = "0.3.30", features = ["thread-pool", "async-await"] }
hex = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "70082df7e6181722630eabc5de5373733aac9a21", features = ["gossipsub", "kad", "request-response", "noise", "yamux", "mdns", "identify", "ping", "tcp", "tokio", "macros"] }

log = { version = "0.4.20", features = ["std", "serde"] }
lru = { version = "0.12.0", features = ["hashbrown"] }
rand = { version = "0.8.5", features = ["std", "std_rng"] }
rand_chacha = "0.3.1"
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde_json = { version = "1.0.108", features = ["std"] }
thiserror = "1.0.56"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "time", "sync", "net", "io-util"] }
tracing = { version = "0.1.40", features = ["std"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }

# Project dependencies
rusty-shared-types = { path = "../rusty-shared-types" }
rusty-core = { path = "../rusty-core" }


[dev-dependencies]
rand = "0.8"
