[package]
name = "rusty-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
jsonrpsee = { version = "0.16.0", features = ["server", "macros"] }
tokio-rustls = "0.24"
rustls-pemfile = "1.0"
rusty-core = { path = "../rusty-core" }
rusty-types = { path = "../rusty-types" }
rusty-shared-types = { path = "../rusty-shared-types" }
thiserror = "1.0"
hex = "0.4"
bincode = "1.3"
anyhow = "1.0"
log = "0.4"
rand = "0.8"